[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests
norecursedirs = .git

[coverage:run]
branch = True
omit =
    */__main__.py
    */tests/*
    */venv/*

[coverage:report]
omit =
    */python?.?/*
    */site-packages/nose/*
    *__init__*

[flake8]
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    venv
max-line-length = 120

[pylint]
disable=
  too-many-arguments,
  too-many-instance-attributes,
  too-many-locals,
  ; Bug in Python 3.9
  ; https://github.com/PyCQA/pylint/issues/3882
  unsubscriptable-object,

max-line-length = 120



